--- a/SalesWebMVC/Views/Sellers/Delete.cshtml
+++ b/SalesWebMVC/Views/Sellers/Delete.cshtml
@@ -10,7 +10,7 @@
 </h3>
 
 <div>
-    <h4>
+    <h4>Seller</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
@@ -43,5 +43,5 @@
             <input type="submit" value="Delete" class="btn btn-danger"/>
             <a asp-action="Index">Back to list</a>
         </form>
-    </h4>
 </div>
+
